2005-08-08  Manish Singh  <yosh@gimp.org>

	* glib/abicheck.sh: remove stray -V option to grep so it actually
	works.

2005-08-08  Matthias Clasen  <mclasen@redhat.com>

	* tests/convert-test.c: Enable the endianness test.

	* glib/gconvert.c: Make the caching of iconv descriptors
	optional.

	* configure.in: Add an --enable-iconv-cache option, and
	default to disabling iconv caching on new enough glibc.
	Somebody with access to Solaris systems will need to test
	if opening/closing of iconv descriptors is enough of
	a performance problem to warrant the caching on that 
	platform. Note that the caching is causing correctness
	problems in some corner cases, thus turning it off
	is desirable unless it has severe performance implications.

	* tests/convert-test.c: Add a test for 
	endianness handling.

2005-08-08  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>

	* configure.in: Added "te" to ALL_LINGUAS.

2005-08-08  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am: Add convert-test here.

	* tests/convert-test.c: Add the beginning of a testsuite
	for g_convert() and friends. 

2005-08-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Include glib_on_error_halt.
	
	* glib/abicheck.sh: Also check exported variables.

2005-08-05  Manish Singh  <yosh@gimp.org>

	* tests/refcount/closures.c: remove unused n_threads variable.

2005-08-05  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.7.7 ===

	* NEWS: Updates

2005-08-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gatomic.[hc]: Always export g_atomic_int_get and
	g_atomic_pointer_get as functions, even if we have macros,
	to avoid changing the ABI depending on configuration.
	
	* glib/gatomic.c: Fix the s390 implementations of 
	g_atomic_pointer_compare_and_exchange.

2005-08-04  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.h: Move the G_BEGIN_DECLS/G_END_DECLS pair outside